remove tooling-support module